[package]
name = "vast4"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An implementation of VAST 4.2 FINAL."
repository = "https://github.com/marcsantiago/vast4-rs" 
categories = ["api-bindings"]
keywords = ["iab", "openrtb", "vast"]
readme = "README.md"

[dependencies]
hard-xml = "1.21"

[dev-dependencies]
pretty_assertions = "1.3"
