[package]
name = "vast4-rs"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "An implementation of VAST 4.2 FINAL."
repository = "https://github.com/marcsantiago/vast4-rs" 
categories = ["api-bindings"]
keywords = ["iab", "openrtb", "vast"]
readme = "README.md"

[dependencies]
hard-xml = "1.21"

[dev-dependencies]
pretty_assertions = "1.3"
